<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:baselineAligned="false"
    android:weightSum="10">

    <FrameLayout
        android:id="@+id/master_fragment_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="7"
        />

    <FrameLayout
        android:id="@+id/master_fragment_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
       />
</LinearLayout>