<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ingredients_master_list_fragment"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.Fragments.RecipeIngredientsFragment"
    android:overScrollMode="always"

    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">


        <include layout="@layout/ingredients_card" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/ingredientsListStepsRV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            android:visibility="gone"
            />




    </LinearLayout>

</ScrollView>