<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:id="@+id/recipe_steps_fragment"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight=".8">
        <include
            layout="@layout/steps_card"
            />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0">
        <include
            layout="@layout/next_and_prev_buttons" />

    </FrameLayout>




</LinearLayout>